--- a/test/.settings/org.eclipse.core.resources.prefs
+++ b/test/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,5 @@
 eclipse.preferences.version=1
 encoding//assets/lua/admin_main.lua=UTF-8
+encoding//assets/lua/admin_newstu.lua=UTF-8
 encoding//assets/lua/main.lua=UTF-8
+encoding//assets/lua/stu_main.lua=UTF-8
